2008-06-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date.

2008-06-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement external reset through nSRST signal.
	Based on the idea from patch #1398862 but implemented
	in a completely different way.
	* src/jtag.h: Add apply_nSRST to struct jtag, and parameter
	possible_nSRST to resetProgram().
	* src/jtag1.h: Add nrst to constructor.
	* src/jtag2.h: (Ditto.)
	* src/jtag2io.cc: Try applying nSRST before enabling JTAG
	emulation.
	* src/jtag2run.cc: possible_nSRST is ignored in mkII
	resetProgram().
	* src/jtagio.cc: Add possible_nSRST parameters.
	* src/remote.cc: (Ditto.)
	* src/jtagrun.cc: Implement possible_nSRST for mkI.
	* src/main.cc: Add option -R/--reset-srst.
	* doc/avarice.1: Document option -R/--reset-srst.

2008-06-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc: Add "target_sleep" to the list of events to be
	ignored by default.
	* doc/avarice.1: Document the above change.

2008-06-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/avarice.1: Document all the newly supported devices.
	* src/devdescr.cc: Remove duplicate entry for AT90USB1287;
	fix EECRAddress for all recent entries (must be fill_b2()).
	* tools/devdescr.xsl: Add fill_b2() to EECRAddress.

2008-05-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ 1948200 ] Add option to print list of known devices
	Submitted by  Rick Mann
	* src/main.cc: Add the option -k/--known-devices.
	Sort deviceDefinitions alphabetically before.
	* doc/avarice.1: Document the -k option.

2008-05-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ patch 1909351 ] ATmega32c1, ATmega32m1
	[ patch 1909933 ] sync to xml from avrstudio 4.14 beta
	Submitted by David B. Curtis
	* src/devdescr.cc: Add support for all currently known (by
	AVR Studio's partdescription files) AVR devices.

2008-05-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	[ patch 1750202 ] set parameter command failed
	(Original patch *not* used though.)