@@ -300,9 +300,9 @@ int main(int argc, char **argv)
     struct sockaddr_in clientname;
     struct sockaddr_in name;
     char *inFileName = 0;
-    char *jtagDeviceName = NULL;
+    const char *jtagDeviceName = NULL;
     char *device_name = 0;
-    char *eventlist = "none,run,target_power_on,target_sleep,target_wakeup";
+    const char *eventlist = "none,run,target_power_on,target_sleep,target_wakeup";
     unsigned long jtagBitrate = 0;
     const char *hostName = "0.0.0.0";	/* INADDR_ANY */
     int  hostPortNumber;
